[package]
name = "jj_toolkit"
version = "0.6.0"
edition = "2024"
build = "build.rs"
authors = ["JJayRex"]

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
blake3 = "1"
md-5 = "0.11.0-rc.2"
sha2 = "0.11.0-rc.2"
sha1 = "0.11.0-rc.2"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "ico", "tiff", "tga", "dds", "pnm"] }
argon2 = "0.6.0-rc.2"
rpassword = "7.4"
rand = "0.10.0-rc.5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
zeroize = "1.8"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
lz4_flex = "0.11"
brotli2 = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
