[package]
name = "jj_toolkit"
version = "0.9.2"
edition = "2024"
build = "build.rs"
authors = ["JJayRex"]

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
blake3 = "1"
md-5 = "0.11.0-rc.2"
sha2 = "0.11.0-rc.2"
sha1 = "0.11.0-rc.2"
crc32fast = "1"
crc32c = "0.6"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "ico", "tiff", "tga", "dds", "pnm"] }
argon2 = "0.6.0-rc.2"
rpassword = "7.4"
rand = "0.10.0-rc.5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
zeroize = "1.8"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
lz4_flex = "0.11"
brotli2 = "0.3"
snap = "1"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core"] }
rsa = { version = "0.9" }
p256 = { version = "0.13", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256"] }
rand_core_new = { package = "rand_core", version = "0.10.0-rc.2" }
rand_core_old = { package = "rand_core", version = "0.6.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "3", features = ["serde"] }
bincode = { version = "2", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
